@@ -6,7 +6,6 @@ import org.f24.dto.component.PaymentReasonRecord;
 import org.f24.dto.component.PaymentReasonSection;
 import org.f24.dto.component.PersonData;
 import org.f24.dto.component.TaxPayer;
-import java.util.stream.Collectors;
 
 public class F24SimplifiedConverter extends F24Converter {
 
@@ -32,14 +31,12 @@ public class F24SimplifiedConverter extends F24Converter {
     private TaxPayer convertTaxPayer(TaxPayerSimplified inputTaxPayer) {
         TaxPayer taxPayer = new TaxPayer();
         taxPayer.setIdCode(inputTaxPayer.getId());
-        //TODO ? taxPayer.setIsNotTaxYear(inputTaxPayer.g);
         taxPayer.setTaxCode(inputTaxPayer.getTaxCode());
         taxPayer.setOfficeCode(inputTaxPayer.getOffice());
         taxPayer.setDocumentCode(inputTaxPayer.getDocument());
         taxPayer.setRelativePersonTaxCode(inputTaxPayer.getRelativePersonTaxCode());
 
         if(inputTaxPayer.getPersonalData() != null) {
-            // TODO è giusto andare a settare solo i PersonData dentro i Personal?
             PersonData personData = new PersonData();
             personData.setPersonalData(this.convertPersonalData(inputTaxPayer.getPersonalData()));
             taxPayer.setPersonData(personData);
@@ -55,27 +52,22 @@ public class F24SimplifiedConverter extends F24Converter {
                     payments.getRecords()
                             .stream()
                             .map(this::convertReasonRecord)
-                            .collect(Collectors.toList()));
+                            .toList());
         }
-        //TODO ? paymentReasonSection.setRecordList();
         return paymentReasonSection;
     }
 
-    private PaymentReasonRecord convertReasonRecord(SimplifiedPaymentRecord record) {
+    private PaymentReasonRecord convertReasonRecord(SimplifiedPaymentRecord simplifiedPaymentRecord) {
         PaymentReasonRecord paymentReasonRecord = new PaymentReasonRecord();
-        paymentReasonRecord.setSection(record.getSection());
-        /*
-        TODO ?
-        paymentReasonRecord.setAdvancePayment();
-        paymentReasonRecord.setFullPayment();
-        paymentReasonRecord.setMonth();
-        paymentReasonRecord.setYear();
-        paymentReasonRecord.setReconsideration();
-        paymentReasonRecord.setMunicipalityCode();
-        paymentReasonRecord.setPropertiesChanges();
-        paymentReasonRecord.setTaxTypeCode();
-        paymentReasonRecord.setNumberOfProperties();
-        */
+        paymentReasonRecord.setSection(simplifiedPaymentRecord.getSection());
+        paymentReasonRecord.setAdvancePayment(simplifiedPaymentRecord.getAdvancePayment());
+        paymentReasonRecord.setFullPayment(simplifiedPaymentRecord.getFullPayment());
+        paymentReasonRecord.setYear(simplifiedPaymentRecord.getYear());
+        paymentReasonRecord.setReconsideration(simplifiedPaymentRecord.getReconsideration());
+        paymentReasonRecord.setMunicipalityCode(simplifiedPaymentRecord.getMunicipality());
+        paymentReasonRecord.setPropertiesChanges(simplifiedPaymentRecord.getPropertiesChanges());
+        paymentReasonRecord.setTaxTypeCode(simplifiedPaymentRecord.getTaxType());
+        paymentReasonRecord.setNumberOfProperties(simplifiedPaymentRecord.getNumberOfProperties());
         return paymentReasonRecord;
     }
 }
